# cv_learn

./: .clang-format  .gitignore  CMakeLists.txt
src/: how_to_scan_images.cpp  mat_mask_operations.cpp  test.cpp  test.py
